--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-loader": "^6.4.1",
     "es6-promise": "^4.1.0",
+    "eslint": "^3.19.0",
     "mocha-loader": "^1.1.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
